fix coverage pipeline -codecov